[project]
name = "hemac"
authors = [
    { name = "Charles Dansereau", email = "charles.dansereau@thalesgroup.com" },
]
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = []
dependencies = [
    "coloredlogs==15.0.1",
    "geopy==2.4.1",
    "gymnasium==0.28.1",
    "numpy==1.26.4",
    "pettingzoo==1.24.3",
    "pygame==2.3.0",
    "pymap3d==3.1.0",
    "tensorboard==2.20",
    "stable_baselines3==2.3.2",
    "SuperSuit==3.9.2",
    "shapely==2.0.5",
]

[project.optional-dependencies]
test = [
    "pymunk==6.8.1",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.5",
]

[project.urls]
Homepage = "https://gitlab.thalesdigital.io/tds/rti/coordinated-multi-function-decision-making/hemarl"
Issues = "https://gitlab.thalesdigital.io/tds/rti/coordinated-multi-function-decision-making/hemarl/issues"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]
[tool.hatch.build.targets.wheel]
packages = ["src/hemac"]

[tool.setuptools]
py-modules = []

## Ruff
[tool.ruff]
target-version = "py311"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*pb2.py",
]
# Same as Black.
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "UP", "N", "W", "D", "Q"]
ignore = ["D203", "D213"]
preview = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

## Pytest
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/ --cov-report term --cov-report html --cov-fail-under 50.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test"]
python_functions = ["test"]
# NOTE: "doc" is not included here, but gets tested explicitly via "doctesting".
testpaths = ["tests"]
norecursedirs = [
    ".*",
    "build",
    "dist",
]
xfail_strict = true
filterwarnings = [
#    "error",
#    "default:Using or importing the ABCs:DeprecationWarning:unittest2.*",
    # produced by older pyparsing<=2.2.0.
#    "default:Using or importing the ABCs:DeprecationWarning:pyparsing.*",
#    "default:the imp module is deprecated in favour of importlib:DeprecationWarning:nose.*",
    # distutils is deprecated in 3.10, scheduled for removal in 3.12
    "ignore:The distutils package is deprecated:DeprecationWarning",
    # produced by pytest-xdist
    "ignore:.*type argument to addoption.*:DeprecationWarning",
    # produced on execnet (pytest-xdist)
    "ignore:.*inspect.getargspec.*deprecated, use inspect.signature.*:DeprecationWarning",
    # pytest's own futurewarnings
    "ignore::pytest.PytestExperimentalApiWarning",
    # Do not cause SyntaxError for invalid escape sequences in py37.
    # Those are caught/handled by pyupgrade, and not easy to filter with the
    # module being the filename (with .py removed).
    "default:invalid escape sequence:DeprecationWarning",
    # ignore not yet fixed warnings for hook markers
    "default:.*not marked using pytest.hook.*",
    "ignore:.*not marked using pytest.hook.*::xdist.*",
    # ignore use of unregistered marks, because we use many to test the implementation
    "ignore::_pytest.warning_types.PytestUnknownMarkWarning",
    # https://github.com/benjaminp/six/issues/341
    "ignore:_SixMetaPathImporter\\.exec_module\\(\\) not found; falling back to load_module\\(\\):ImportWarning",
    # https://github.com/benjaminp/six/pull/352
    "ignore:_SixMetaPathImporter\\.find_spec\\(\\) not found; falling back to find_module\\(\\):ImportWarning",
    # https://github.com/pypa/setuptools/pull/2517
    "ignore:VendorImporter\\.find_spec\\(\\) not found; falling back to find_module\\(\\):ImportWarning",
    # https://github.com/pytest-dev/execnet/pull/127
    "ignore:isSet\\(\\) is deprecated, use is_set\\(\\) instead:DeprecationWarning",
]
markers = [
    # dummy markers for testing
    "foo",
    "bar",
    "baz",
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
    # experimental mark for all tests using pexpect
    "uses_pexpect",
]
[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    #    "*/sparq.model/*",
]
